[subresource_filter] Do not populate metadata for warning sites.

Currently, we populate website data metadata for sites which activate
as ENABLED. This metadata is used to trigger showing the "Ads" setting
in the settings UI, OIB, and page info.

However, we also activate as ENABLED for warning sites, and decrease
activation level downstream in the driver factory. This means that
warning sites will show up in the various settings UIs as having
intrusive ads.

This CL makes it so that warning sites do not populate the metadata. 

Bug: 779673
Change-Id: I972faf6aeda6884b584c8383918fa7a9ba966b6c
Reviewed-on: https://chromium-review.googlesource.com/744442
Reviewed-by: Shivani Sharma <shivanisha@chromium.org>
Commit-Queue: Charlie Harrison <csharrison@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512636}
Former-commit-id: 16139bbf766b741be3037d19dba381dfcc311d9c